--- a/src/index.html
+++ b/src/index.html
@@ -3,4 +3,6 @@ layout: default
 title: BrainsCloud | Home
 ---
 
-Hello!
+<div class="home-page">
+  <div class="home-page__stories">{{> stories }}</div>
+</div>
