add home page content

--- a/src/index.html
+++ b/src/index.html
@@ -5,4 +5,5 @@ title: BrainsCloud | Home
 
 <div class="home-page">
   <div class="home-page__stories">{{> stories }}</div>
+  <div>{{> posts}}</div>
 </div>
